--- a/package.json
+++ b/package.json
@@ -220,7 +220,10 @@
     "@metamask/eth-keyring-controller@npm:^13.0.1": "patch:@metamask/eth-keyring-controller@npm%3A13.0.1#~/.yarn/patches/@metamask-eth-keyring-controller-npm-13.0.1-06ff83faad.patch",
     "nonce-tracker@npm:^3.0.0": "patch:nonce-tracker@npm%3A3.0.0#~/.yarn/patches/nonce-tracker-npm-3.0.0-c5e9a93f9d.patch",
     "@metamask/accounts-controller@npm:^4.0.0": "patch:@metamask/accounts-controller@npm%3A4.0.0#~/.yarn/patches/@metamask-accounts-controller-npm-4.0.0-3127b56d14.patch",
-    "@trezor/connect-web": "9.0.11"
+    "@trezor/connect-web": "9.0.11",
+    "@metamask-institutional/custody-keyring@npm:^1.0.6": "patch:@metamask-institutional/custody-keyring@npm%3A1.0.7#~/.yarn/patches/@metamask-institutional-custody-keyring-npm-1.0.7-e20ee2bc55.patch",
+    "@metamask-institutional/custody-keyring@npm:^1.0.7": "patch:@metamask-institutional/custody-keyring@npm%3A1.0.7#~/.yarn/patches/@metamask-institutional-custody-keyring-npm-1.0.7-e20ee2bc55.patch",
+    "@metamask-institutional/custody-controller@npm:^0.2.18": "patch:@metamask-institutional/custody-controller@npm%3A0.2.18#~/.yarn/patches/@metamask-institutional-custody-controller-npm-0.2.18-73618b9f81.patch"
   },
   "dependencies": {
     "@babel/runtime": "^7.23.2",
@@ -238,8 +241,8 @@
     "@keystonehq/metamask-airgapped-keyring": "^0.13.1",
     "@lavamoat/snow": "^2.0.1",
     "@material-ui/core": "^4.11.0",
-    "@metamask-institutional/custody-controller": "^0.2.18",
-    "@metamask-institutional/custody-keyring": "^1.0.7",
+    "@metamask-institutional/custody-controller": "patch:@metamask-institutional/custody-controller@npm%3A0.2.18#~/.yarn/patches/@metamask-institutional-custody-controller-npm-0.2.18-73618b9f81.patch",
+    "@metamask-institutional/custody-keyring": "patch:@metamask-institutional/custody-keyring@npm%3A1.0.7#~/.yarn/patches/@metamask-institutional-custody-keyring-npm-1.0.7-e20ee2bc55.patch",
     "@metamask-institutional/extension": "^0.3.12",
     "@metamask-institutional/institutional-features": "^1.2.9",
     "@metamask-institutional/portfolio-dashboard": "^1.4.0",
